@@ -5,13 +5,14 @@ import java.sql.SQLException;
 
 // ssh -L 8081:webetu:3306 am04482t@mira2.univ-st-etienne.fr pour le tunel VPN
 
+/**
+ * Classe qui charge le Driver et se Connecte a la base de donnée
+ */
 public class LoadDriver {
     public static void main(String[] args) {
         try {
-            // The newInstance() call is a work around for some
-            // broken Java implementations
-
-            Class.forName("com.mysql.jdbc.Driver").newInstance();
+            /*On crée une instance du driver pour pouvoir se connecter a la BDD distante*/
+            Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
             System.out.println("Instance créée");
         } catch (Exception ex) {
             // handle the error
@@ -20,6 +21,7 @@ public class LoadDriver {
         
         Connection conn = null;
         try {
+            /*On se connecte ensuite a la bdd distante grace au tunnel ssh*/
             conn =
                DriverManager.getConnection("jdbc:mysql://localhost:8081/am04482t",
                                            "am04482t", "HQR2DFBY");
